syntax = "proto3";

package app.improving;

import "kalix/annotations.proto";

message ApiMemberId {
    string member_id = 1 [(kalix.field).entity_key = true];
}

message ApiTenantId {
    string tenant_id = 1 [(kalix.field).entity_key = true];
}

/**
 * Pattern of:
 * (?:[a-z0-9!#$%&'*+/=?^_{|}~-](?:.[a-z0-9!#$%&â€™*+/=?^_{|}~-])|\"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])\")@(?:(?:[a-z0-9](?:[a-z0-9-][a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-][a-z0-9])?|[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)])
 */
message ApiEmailAddress {
    string value = 1;
}

/**
 * Pattern of:
 * \(([0-9]{3})\)([0-9]{3})-([0-9]{4})
 */
message ApiMobileNumber {
    string value = 1;
}

message ApiContact {
    string firstName = 1;
    string lastName = 2;
    ApiEmailAddress emailAddress = 3;
    ApiMobileNumber phone = 4;
    string userName = 5;
}

message ApiGeoLocation {
    double latitude = 1;
    double longitude = 2;
    double elevation = 3;
}

message ApiUSPostalCode {
    string postal_code = 1;
}

message ApiCAPostalCode {
    string postal_code = 1;
}

message ApiAddress {
    string line1 = 1;
    string line2 = 2;
    string city = 3;
    string stateProvince = 4;
    string country = 5;
    oneof postal_code {
        ApiUSPostalCode us_postal_code = 6;
        ApiCAPostalCode ca_postal_code = 7;
    }
}